slider overflow issue fix

--- a/src/app/about/style.css
+++ b/src/app/about/style.css
@@ -172,8 +172,3 @@
         }
     }
 }
-section {
-  position: relative;
-  z-index: 1;
-  background: #fff;
-}
